<resources>
    <string name="app_name">SeaBattle</string>
    <string name="app_title">The Sea Battle</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="game_mode">Game Mode</string>
    <string name="player_mode">Player Mode</string>
    <string name="select_player">Select player</string>
    <string name="new_player">New player</string>
    <string name="single_device">Single Device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="music_on">Music ON</string>
    <string name="vibrate_on">Vibration ON</string>
    <string name="sound_on">Sounds ON</string>
    <string name="music_off">Music OFF</string>
    <string name="vibrate_off">Vibration OFF</string>
    <string name="sound_off">Sounds OFF</string>
    <string name="enter_player">Player name</string>
    <string name="player">Player</string>
    <string name="players_names">Player\'s names</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="new_game">New Game</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="enter_game_name">Game name</string>
    <string name="select_first_player">Starting player</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="reset">Reset</string>
    <string name="next_player">Next player</string>
    <string name="place_your_ships">Place your ships</string>
    <string name="game">Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="pause">Pause</string>
    <string name="game_time">Game time:</string>
    <string name="none_found">None found</string>
    <string name="select_device">Select device</string>
    <string name="none_paired">None paired</string>
    <string name="connect">Connect</string>
    <string name="waiting_opponent">Waiting for opponent</string>
    <string name="games_history">Games history</string>
    <string name="sample_text">Sample text</string>
    <string name="goto_github">Go to GitHub website</string>
    <string name="author_info">Author: Andrej Mikoláš</string>
</resources>
